--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>React test</title>
+  <title>React Webpack Starter</title>
+  <meta name="theme-color" content="#000000">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <div id="app"></div>
