--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
   <div id="app"></div>
 </body>
 </html>
