--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>React Webpack Starter</title>
   <meta name="theme-color" content="#000000">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <noscript>
